v1.1.0
- NEW: Form input typography settings.
- NEW: Dedicated WooCommerce integration CSS.
- NEW: WooCommerce's quantity form input will have minus (-) and plus (+) button.
- NEW: Add CSS compatibility for older browsers like IE11 and Safari iOS 9.
- NEW: Add new item into the modules list for Suki Pro v1.1.0.
- TWEAK: Improve dynamic CSS placement on frontend to allow Child Theme override the styles easier.
- TWEAK: Improve frontend's general typography CSS for better readibility.
- TWEAK: Improve featured image size used in default post layout and grid post layout.
- TWEAK: Improve WooCommerce cart table CSS.
- TWEAK: Improve Suki theme dashboard page's UI.
- TWEAK: Improve Header Builder: Allow header logo to be placed on all header sections.
- TWEAK: Improve Header Builder: Allow HTML header element to be placed on mobile header section.
- TWEAK: Improve some Customizer settings' UI.
- TWEAK: Improve Customizer number field validation.
- TWEAK: Update Google Fonts list to the latest one.
- FIX: WooCommerce select2 CSS.
- FIX: Customizer dimensions control doesn't show the saved unit value correctly.

v1.0.14
- TWEAK: Improve logo's vertical alignment CSS.

v1.0.13
- TWEAK: Improve javascript that makes header sub menu aligned properly.
- FIX: Button and form input typography should inherit base typography.

v1.0.12
- TWEAK: Improve WooCommerce checkout page structures for compatibility with 3rd party plugins.
- TWEAK: Improve WooCommerce 2 columns layout checkout page styles.
- FIX: Base CSS for iframe.

v1.0.11
- NEW: Elementor compatibility CSS.
- NEW: Brizy Integration option: disable Brizy's reset CSS.
- NEW: Footer copyright text now supports new syntax {{theme}}.
- TWEAK: Improve theme's CSS to be slightly slimmer.
- TWEAK: Improve image width on any Gutenberg embed block with image type.

v1.0.10
- NEW: Brizy Integration option: use theme's content width as Brizy content width.
- TWEAK: Improve HTML markup of WooCommerce's "added to cart" message.