@@ -1,5 +1,6 @@
 v1.1.0
 - NEW: Form input typography settings.
+- NEW: Add option to change page header title text for post type archive page and taxonomy archive page.
 - NEW: Dedicated WooCommerce integration CSS.
 - NEW: WooCommerce's quantity form input will have minus (-) and plus (+) button.
 - NEW: Add CSS compatibility for older browsers like IE11 and Safari iOS 9.
